--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     <footer>
         <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a
-                href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>.</p>
+                href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>. Desenvolvido por <strong>Rodrigo Maciel</strong> &#x1F60E&#x1F919</p>
     </footer>
 </body>
 
